--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,24 @@ services:
             - "8000:8000"
         volumes:
             - ./backend:/backend
+        links: 
+            - mysql_database:mysql_database
+        depends_on: 
+            - mysql_database
+        command: sh -c "
+            python manage.py makemigrations
+            && python manage.py migrate
+            && python manage.py loaddata article_fixture.json
+            && python manage.py runserver 0.0.0.0:8000
+          "
+    mysql_database:
+        image: mysql:5.7
+        environment: 
+            MYSQL_ROOT_PASSWORD: password
+            MYSQL_DATABASE: fullstackapp_db
+            MYSQL_ROOT_HOST: '%'
+        ports:
+            - "3308:3306"
     redis:
         image: sameersbn/redis:latest
         ports:
